--- a/assets/lang/id.json
+++ b/assets/lang/id.json
@@ -649,7 +649,7 @@
     "core.contentlinks.errornosites": "Tidak dapat menemukan situs apapun untuk mengendalikan link ini.",
     "core.continue": "lanjut",
     "core.copiedtoclipboard": "Teks disalin ke clipboard",
-    "core.course": "Kursus",
+    "core.course": "Mata Pelajaran",
     "core.course.activitydisabled": "Organisasi Anda telah menonaktifkan aktifitas ini di aplikasi mobile.",
     "core.course.activitynotyetviewableremoteaddon": "Organisasi Anda menginstall plugin yang belum didukung.",
     "core.course.activitynotyetviewablesiteupgradeneeded": "Instalasi Moodle organisasi Anda butuh pembaruan.",
@@ -672,12 +672,12 @@
     "core.course.sections": "Bagian",
     "core.course.useactivityonbrowser": "Anda masih dapat menggunakannya dengan perangkat pencarian.",
     "core.coursedetails": "Detil kursus",
-    "core.courses.allowguests": "Kursus ini membolehkan pengunjung tamu untuk masuk",
-    "core.courses.availablecourses": "Kursus yang tersedia",
+    "core.courses.allowguests": "Mata Pelajaran ini membolehkan pengunjung tamu untuk masuk",
+    "core.courses.availablecourses": "Mata Pelajaran yang tersedia",
     "core.courses.cannotretrievemorecategories": "Kategori yang lebih dalam dari tingkat {{$ a}} tidak dapat diambil.",
-    "core.courses.categories": "Kategori Kursus",
+    "core.courses.categories": "Kategori Mata Pelajaran",
     "core.courses.confirmselfenrol": "Apakah Anda yakin ingin mendaftarkan diri mengikuti materi ini?",
-    "core.courses.courses": "Kursus",
+    "core.courses.courses": "Mata Pelajaran",
     "core.courses.enrolme": "Daftarkan saya",
     "core.courses.errorloadcategories": "Terjadi kesalahan saat memuat kategori.",
     "core.courses.errorloadcourses": "Terjadi kesalahan saat memuat materi",
@@ -686,12 +686,12 @@
     "core.courses.filtermycourses": "Saring materi saya",
     "core.courses.frontpage": "Halaman depan",
     "core.courses.ignore": "Abaikan",
-    "core.courses.mycourses": "Kursus Yang Saya Ikuti",
+    "core.courses.mycourses": "Mata Pelajaran Yang Saya Ikuti",
     "core.courses.nocourses": "Tidak ada informasi kursus untuk ditampilkan.",
     "core.courses.nocoursesyet": "Belum ada kursus saat ini",
     "core.courses.notenrollable": "Anda tidak dapat mendaftarkan diri ke materi.",
     "core.courses.password": "kunci pendaftaran",
-    "core.courses.paymentrequired": "Kursus ini membutuhkan pembayaran untuk mengikutinya.",
+    "core.courses.paymentrequired": "Mata Pelajaran ini membutuhkan pembayaran untuk mengikutinya.",
     "core.courses.reload": "Muat ulang",
     "core.courses.search": "Cari",
     "core.courses.searchcourses": "Cari kursus",
@@ -764,7 +764,7 @@
     "core.fileuploader.video": "Video",
     "core.folder": "Folder",
     "core.forcepasswordchangenotice": "Anda harus mengubah kata sandi Anda untuk memproses lebih lanjut.",
-    "core.fulllistofcourses": "Materi Kursus yang sudah tersedia",
+    "core.fulllistofcourses": "Materi Mata Pelajaran yang sudah tersedia",
     "core.fullnameandsitename": "{{namalengkap}} ({{{{namalengkap}} ({{namasitus}})namasitus}})",
     "core.grades.average": "Rata-rata",
     "core.grades.badgrade": "Nilai yang dimasukkan tidak benar",
