kursus jadi mapel

--- a/assets/lang/id.json
+++ b/assets/lang/id.json
@@ -45,7 +45,7 @@
     "addon.calendar.tomorrow": "Besok",
     "addon.calendar.tue": "Sel",
     "addon.calendar.tuesday": "Selasa",
-    "addon.calendar.typecourse": "Agenda kursus",
+    "addon.calendar.typecourse": "Agenda mata pelajaran",
     "addon.calendar.typegroup": "Agenda grup",
     "addon.calendar.typesite": "Agenda situs",
     "addon.calendar.typeuser": "Agenda pengguna",
@@ -208,7 +208,7 @@
     "addon.mod_lesson.completed": "Selesai",
     "addon.mod_lesson.congratulations": "Selamat - Akhir dari pelajaran telah sampai",
     "addon.mod_lesson.continue": "Melanjutkan",
-    "addon.mod_lesson.defaultessayresponse": "Essai Anda akan dinilai oleh instruktur kursus.",
+    "addon.mod_lesson.defaultessayresponse": "Essai Anda akan dinilai oleh instruktur mata pelajaran.",
     "addon.mod_lesson.detailedstats": "Statistik yang terperinci",
     "addon.mod_lesson.didnotanswerquestion": "Tidak menjawab pertanyaan ini.",
     "addon.mod_lesson.displayofgrade": "Tampilan peringkat (hanya untuk siswa)",
@@ -649,7 +649,7 @@
     "core.contentlinks.errornosites": "Tidak dapat menemukan situs apapun untuk mengendalikan link ini.",
     "core.continue": "lanjut",
     "core.copiedtoclipboard": "Teks disalin ke clipboard",
-    "core.course": "Kursus",
+    "core.course": "mata pelajaran",
     "core.course.activitydisabled": "Organisasi Anda telah menonaktifkan aktifitas ini di aplikasi mobile.",
     "core.course.activitynotyetviewableremoteaddon": "Organisasi Anda menginstall plugin yang belum didukung.",
     "core.course.activitynotyetviewablesiteupgradeneeded": "Instalasi Moodle organisasi Anda butuh pembaruan.",
@@ -662,22 +662,22 @@
     "core.course.contents": "Konten",
     "core.course.couldnotloadsectioncontent": "Tidak dapat memuat bagian konten. Silahkan Coba lagi nanti.",
     "core.course.couldnotloadsections": "Tidak dapat memuat bagian. Silahkan Coba lagi nanti.",
-    "core.course.coursesummary": "Ringkasan kursus",
+    "core.course.coursesummary": "Ringkasan mata pelajaran",
     "core.course.errordownloadingsection": "Terjadi kesalahan saat mengunduh bagian.",
     "core.course.errorgetmodule": "Terjadi kesalahan saat mendapatkan data modul.",
     "core.course.hiddenfromstudents": "Tersembunyi dari siswa",
-    "core.course.hiddenoncoursepage": "Tersedia tapi tidak ditampilkan di halaman kursus",
+    "core.course.hiddenoncoursepage": "Tersedia tapi tidak ditampilkan di halaman mata pelajaran",
     "core.course.nocontentavailable": "Tidak ada konten tersedia untuk saat ini.",
     "core.course.overriddennotice": "Nilai akhir anda fari aktifitas ini telah disesuaikan secara manual.",
     "core.course.sections": "Bagian",
     "core.course.useactivityonbrowser": "Anda masih dapat menggunakannya dengan perangkat pencarian.",
-    "core.coursedetails": "Detil kursus",
-    "core.courses.allowguests": "Kursus ini membolehkan pengunjung tamu untuk masuk",
-    "core.courses.availablecourses": "Kursus yang tersedia",
+    "core.coursedetails": "Detil mata pelajaran",
+    "core.courses.allowguests": "mata pelajaran ini membolehkan pengunjung tamu untuk masuk",
+    "core.courses.availablecourses": "mata pelajaran yang tersedia",
     "core.courses.cannotretrievemorecategories": "Kategori yang lebih dalam dari tingkat {{$ a}} tidak dapat diambil.",
-    "core.courses.categories": "Kategori Kursus",
+    "core.courses.categories": "Kategori mata pelajaran",
     "core.courses.confirmselfenrol": "Apakah Anda yakin ingin mendaftarkan diri mengikuti materi ini?",
-    "core.courses.courses": "Kursus",
+    "core.courses.courses": "mata pelajaran",
     "core.courses.enrolme": "Daftarkan saya",
     "core.courses.errorloadcategories": "Terjadi kesalahan saat memuat kategori.",
     "core.courses.errorloadcourses": "Terjadi kesalahan saat memuat materi",
@@ -686,15 +686,15 @@
     "core.courses.filtermycourses": "Saring materi saya",
     "core.courses.frontpage": "Halaman depan",
     "core.courses.ignore": "Abaikan",
-    "core.courses.mycourses": "Kursus Yang Saya Ikuti",
-    "core.courses.nocourses": "Tidak ada informasi kursus untuk ditampilkan.",
-    "core.courses.nocoursesyet": "Belum ada kursus saat ini",
+    "core.courses.mycourses": "mata pelajaran Yang Saya Ikuti",
+    "core.courses.nocourses": "Tidak ada informasi mata pelajaran untuk ditampilkan.",
+    "core.courses.nocoursesyet": "Belum ada mata pelajaran saat ini",
     "core.courses.notenrollable": "Anda tidak dapat mendaftarkan diri ke materi.",
     "core.courses.password": "kunci pendaftaran",
-    "core.courses.paymentrequired": "Kursus ini membutuhkan pembayaran untuk mengikutinya.",
+    "core.courses.paymentrequired": "mata pelajaran ini membutuhkan pembayaran untuk mengikutinya.",
     "core.courses.reload": "Muat ulang",
     "core.courses.search": "Cari",
-    "core.courses.searchcourses": "Cari kursus",
+    "core.courses.searchcourses": "Cari mata pelajaran",
     "core.courses.searchcoursesadvice": "Anda dapat menggunakan tombol pencarian materi untuk mengakses sebagai tamu atau mendaftarkan diri Anda dalam materi yang memungkinkannya.",
     "core.courses.selfenrolment": "Pendaftaran sendiri",
     "core.courses.totalcoursesearchresults": "Total materi {{$a}}",
@@ -764,11 +764,11 @@
     "core.fileuploader.video": "Video",
     "core.folder": "Folder",
     "core.forcepasswordchangenotice": "Anda harus mengubah kata sandi Anda untuk memproses lebih lanjut.",
-    "core.fulllistofcourses": "Materi Kursus yang sudah tersedia",
+    "core.fulllistofcourses": "Materi mata pelajaran yang sudah tersedia",
     "core.fullnameandsitename": "{{namalengkap}} ({{{{namalengkap}} ({{namasitus}})namasitus}})",
     "core.grades.average": "Rata-rata",
     "core.grades.badgrade": "Nilai yang dimasukkan tidak benar",
-    "core.grades.contributiontocoursetotal": "Sumbangsih terhadap total kursus",
+    "core.grades.contributiontocoursetotal": "Sumbangsih terhadap total mata pelajaran",
     "core.grades.feedback": "Umpan balik",
     "core.grades.grade": "Nilai",
     "core.grades.gradeitem": "Butir nilai",
@@ -913,7 +913,7 @@
     "core.noresults": "Tidak ada hasil",
     "core.noselection": "Tidak ada pilihaan",
     "core.notapplicable": "n/a",
-    "core.notenrolledprofile": "Profil ini tidak tersedia karena pengguna belum didaftarkan di kursus ini.",
+    "core.notenrolledprofile": "Profil ini tidak tersedia karena pengguna belum didaftarkan di mata pelajaran ini.",
     "core.notice": "Pemberitahuan",
     "core.notingroup": "Maaf, tetapi Anda harus menjadi bagian dari grup untuk melihat halaman ini.",
     "core.notsent": "Tidak terkirim",
@@ -977,7 +977,7 @@
     "core.secs": "detik",
     "core.seemoredetail": "Klik disini untuk melihat rinciannya",
     "core.selectacategory": "Silahkan pilih kategori",
-    "core.selectacourse": "Pilih kursus",
+    "core.selectacourse": "Pilih mata pelajaran",
     "core.selectagroup": "Pilih grup",
     "core.sending": "Mengirimkan",
     "core.settings.about": "Tentang",
